fix invisible checkbox

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -28,6 +28,11 @@ img.cube_card_img {
     background-color: var(--bs-body-bg) !important;
     color: var(--bs-body-color) !important;
 }
+/*checkbox*/
+input[type="checkbox"].styled:checked {
+    background-color: var(--bs-dark) !important;
+}
+
 .noselect {
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
